@@ -54,5 +54,5 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_t
 8,22629979,CTTV0197621369,,GCTTTGGC,GGAAGACA,,RNA PolyA,GCTTTGGC,GGAAGACA,ncb@sanger.ac.uk slw@sanger.ac.uk,,ncb@sanger.ac.uk slw@sanger.ac.uk,,,0,0,23584446,0,22629979,,9606,S2263,,,standard,,,from:100 to:300,,,Homo sapiens,0,,CTTV0197621369,3840366,CTTV0197621369,,,188 IL22 8,888,EGAS00001001680,1,0,0,The purpose of this study is to establish whether intestinal organoid cultures from IBD patients are a good model of disease by studying various disease phenomena including%2C epithelial repair%2C wound healing%2C fibrotic changes%2C granulomas and inflammatory processes. Organoids will be used for target pertubation and validation studies. %0D%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,4042,CTTV019 RNAseq,Homo_sapiens (GRCh38_15 %2B ensembl_78_transcriptome),0,Transcriptomes of intestinal organoids,3,
 8,22629991,CTTV0197621370,,AACGACTG,GAAATTAT,,RNA PolyA,AACGACTG,GAAATTAT,ncb@sanger.ac.uk slw@sanger.ac.uk,,ncb@sanger.ac.uk slw@sanger.ac.uk,,,0,0,23584446,0,22629991,,9606,S2263,,,standard,,,from:100 to:300,,,Homo sapiens,0,,CTTV0197621370,3840367,CTTV0197621370,,,188 IL22 9,888,EGAS00001001680,1,0,0,The purpose of this study is to establish whether intestinal organoid cultures from IBD patients are a good model of disease by studying various disease phenomena including%2C epithelial repair%2C wound healing%2C fibrotic changes%2C granulomas and inflammatory processes. Organoids will be used for target pertubation and validation studies. %0D%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,4042,CTTV019 RNAseq,Homo_sapiens (GRCh38_15 %2B ensembl_78_transcriptome),0,Transcriptomes of intestinal organoids,4,
 8,22629908,CTTV0197621371,,GACCGTCA,CTTCTTGG,,RNA PolyA,GACCGTCA,CTTCTTGG,ncb@sanger.ac.uk slw@sanger.ac.uk,,ncb@sanger.ac.uk slw@sanger.ac.uk,,,0,0,23584446,0,22629908,,9606,S2263,,,standard,,,from:100 to:300,,,Homo sapiens,0,,CTTV0197621371,3840368,CTTV0197621371,,,Fut2 KO control 1,888,EGAS00001001680,1,0,0,The purpose of this study is to establish whether intestinal organoid cultures from IBD patients are a good model of disease by studying various disease phenomena including%2C epithelial repair%2C wound healing%2C fibrotic changes%2C granulomas and inflammatory processes. Organoids will be used for target pertubation and validation studies. %0D%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,4042,CTTV019 RNAseq,Homo_sapiens (GRCh38_15 %2B ensembl_78_transcriptome),0,Transcriptomes of intestinal organoids,5,
-8,22629920,CTTV0197621372,,CTCTGGGT,ACTTCTCG,,RNA PolyA,CTCTGGGT,ACTTCTCG,ncb@sanger.ac.uk slw@sanger.ac.uk,,ncb@sanger.ac.uk slw@sanger.ac.uk,,,0,0,23584446,0,22629920,,9606,S2263,,,standard,,,from:100 to:300,,,Homo sapiens,0,,CTTV0197621372,3840369,CTTV0197621372,,,Fut2 KO control 2,888,EGAS00001001680,1,0,0,The purpose of this study is to establish whether intestinal organoid cultures from IBD patients are a good model of disease by studying various disease phenomena including%2C epithelial repair%2C wound healing%2C fibrotic changes%2C granulomas and inflammatory processes. Organoids will be used for target pertubation and validation studies. %0D%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,4042,CTTV019 RNAseq,Homo_sapiens (GRCh38_15 %2B ensembl_78_transcriptome),0,Transcriptomes of intestinal organoids,6,
+8,22629920,CTTV0197621372,,CTCTGGGT,ACTTCTCG,,RNA PolyA,CTCTGGGT,ACTTCTCG,ncb@sanger.ac.uk slw@sanger.ac.uk,,ncb@sanger.ac.uk slw@sanger.ac.uk,,,0,0,23584446,0,22629920,,9606,S2263,,,standard,,,from:100 to:300,,,Homo sapiens,0,,CTTV0197621372,3840369,CTTV0197621372,,,Fut2 KO control 2,888,EGAS00001001680,1,0,0,The purpose of this study is to establish whether intestinal organoid cultures from IBD patients are a good model of disease by studying various disease phenomena including%2C epithelial repair%2C wound healing%2C fibrotic changes%2C granulomas and inflammatory processes. Organoids will be used for target pertubation and validation studies. %0D%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,4042,CTTV019 RNAseq,Homo_sapiens (GRCh37_53) DO_NOT_USE,0,Transcriptomes of intestinal organoids,6,
 8,22766063,phiX_for_spiked_buffers,,ACAACGCAATC,,,,ACAACGCAATC,,,,,,,1,0,23584446,0,22766063,,10847,,,,standard,,,,,,,0,,,1255141,phiX_for_spiked_buffers,,PhiX (Sanger-SNPs),,888,,1,0,0,None,198,Illumina Controls, ,0,,888,
